# Cuisine

./: Cargo.toml  index.html
src/: lib.rs  main.rs  router.rs  store.rs
src/api/: api_errors.rs  mod.rs  request.rs
src/atoms/: bb_button.rs  bb_checkbox.rs  bb_link_href.rs  bb_select.rs  bb_text.rs  bb_text_area.rs  bb_text_input.rs  mod.rs
src/organisms/: navbar.rs
src/pages/: home.rs  mod.rs  privacy_policy.rs  strap_modal.rs  suspense.rs
src/utils/: get_google_url.rs  mod.rs
static/js/: bootstrap_modal.js
